--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,7 @@
 .header
   .header__container 
-    .header__container__days
-      ここに時間とかを入れたい
+    .header__container__students
+      =link_to "生徒の登録", new_student_path, class: "header__container__students__new"
     .header__container__title
       学習報告アプリ
     %ul.header__container__list
