--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -1,6 +1,7 @@
 .header {
   width: 100%;
-  background-color: rgb(121, 249, 151);
+  background-color: rgb(64, 249, 107);
+  color: white;
   // position: fixed;
   // top: 0;
   height: 80px;
@@ -10,20 +11,23 @@
     justify-content: space-between;
     margin: 0 5% 0 10%;
     &__students {
-      font-size: 16px;
+      font-size: 18px;
       line-height: 80px;
       text-decoration: none;
-      color: black;
+      color: white;
       &__new {
         text-decoration: none;
-        color: black;
-        font-size:18px;
+        color: white;
+        font-size:20px;
         letter-spacing: 4px;
         font-weight: bold;
       }
+      &__new:hover {
+        color: rgb(252, 85, 227);
+      }
     }
     &__title {
-      font-size: 26px;
+      font-size: 28px;
       line-height: 80px;
       letter-spacing: 5px;
       font-weight: bold;
@@ -38,8 +42,8 @@
         line-height: 80px;
         margin: 0 14px;
         a {
-         font-size: 18px;
-         color: black;
+         font-size: 20px;
+         color: white;
          text-decoration: none;
         }
         a:hover {
