--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -5,7 +5,7 @@
     .name-field
       氏名(フルネーム)
       %br/
-      = f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "例）山田太郎"
+      = f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "例）山田太郎", class: "placeholder"
     .password-field
       パスワード
       %br
