--- a/app/assets/stylesheets/_registration-new.scss
+++ b/app/assets/stylesheets/_registration-new.scss
@@ -23,27 +23,41 @@
 }
 .name-field {
   font-size: 24px;
+  input[type='text']:focus {
+    border: 2px solid #7cfaf8;
+    outline: none;
+  }
 }
 #user_name {
   height: 35px;
   margin: 10px 0 30px 0;
   padding: 6px;
   font-size: 23px;
+  
 }
 .password-field {
   font-size: 24px;
   margin: 20px 0 20px;
+  input:focus {
+    border: 2px solid #7cfaf8;
+    outline: none;
+  }
 }
 #user_password {
   height: 35px;
   margin: 10px 0 30px 0;
   padding: 6px;
   font-size: 23px;
+ 
 }
 .repassword-field {
   font-size: 24px;
   margin: 10px 0 30px;
   font-size: 20px;
+  input:focus {
+    border: 2px solid #7cfaf8;
+    outline: none;
+  }
 }
 #user_password_confirmation {
   height: 35px;
@@ -98,6 +112,12 @@
   position: absolute;
   top: 160px;
   left: 120px;
+ }
+ .field {
+  input:focus {
+    border: 2px solid #5a51f5;
+    outline: none;
+  }
  }
 
 
