--- a/app/assets/stylesheets/_student-registration.scss
+++ b/app/assets/stylesheets/_student-registration.scss
@@ -22,3 +22,52 @@
   border-radius: 8px;
   padding-top: 16px;
 }
+.student-name-field {
+  font-size: 21px;
+  &__fullname {
+   padding: 4px;
+   letter-spacing: 2px;
+   font-size: 20px;
+  }
+  // input[type='text']:focus {
+  //   border: 2px solid #7cfaf8;
+  //   outline: none;
+  // }
+}
+.grade-field {
+  font-size: 20px;
+  margin: 20px 0;
+}
+.grade_class {
+  padding: 22px;
+  font-size: 20px;
+  letter-spacing: 2px;
+  width: 240px;
+  height: 45px;
+  background-color: white;
+  margin-left: 1px;
+  // input:select {
+  //   border: 2px solid #7cfaf8;
+  //   outline: none;
+  // }
+}
+.subject-title {
+  margin: 25px 0 0 20px;
+  font-size: 22px;
+  letter-spacing: 2px;
+}
+.subject-field {
+  font-size: 22px;
+  margin: 5px 0 0 0;
+  input[type=checkbox] {
+    color: red;
+  }
+}
+.student-regist {
+  margin: 30px 0;
+  border-radius: 10%;
+  box-shadow: 2px 3px 4px gray;
+  font-size: 22px;
+  letter-spacing: 2px;
+  width: 80px;
+}
