--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -10,6 +10,16 @@
     flex-direction: row;
     justify-content: space-between;
     margin: 0 5% 0 10%;
+    &__create-report {
+      font-size: 22px;
+      line-height: 80px;
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+    }
+    &__create-report:hover {
+      color: rgb(252, 85, 227);
+    }
     &__students {
       font-size: 18px;
       line-height: 80px;
