--- a/app/views/reports/new.html.haml
+++ b/app/views/reports/new.html.haml
@@ -1,5 +1,9 @@
-.student-registration-container 
-  %h2.student-information 生徒情報
+.report-registration-container 
+  .report-title 
+    生徒指導報告書
+  .report-teacher
+    担任 
+    = current_user.name
   = form_with model: @report, local: true do |r|
     #p.student-information__name 生徒を選んで下さい
     = r.collection_select :student_id, @student_all, :id, :name, :prompt => "生徒を選択"
