--- a/app/assets/stylesheets/_report-registration.scss
+++ b/app/assets/stylesheets/_report-registration.scss
@@ -16,14 +16,12 @@
 }
 .report-teacher {
   width: 20%;
-  margin: 0 0 1em auto;
+  margin: 0 0 0 auto;
   font-size: 22px;
   letter-spacing: 3px;
 }
 .form-box {
   display: flex;
-  // justify-content: space-around;
-  // justify-content: space-between;
   justify-content: center;
 }
 .choose-box1 {
@@ -33,11 +31,10 @@
     padding: 0.5em 1em;
     margin: 2em 0;
     color: #232323;
-    background: #fff8e8;
-    border-left: solid 10px #f7ba69;
+    background: #e8ffeb;
+    border-left: solid 10px #55fa3b;
     width: 100%;
     margin: 0 0 2em 0;
-    height: 8vh;
   }
   &__subject {
     padding: 0.5em 1em;
@@ -48,23 +45,115 @@
     width: 100%;
     margin: 2em 0;
   }
-  &__name {
-  }
 }
+#report_month_1i {
+  height: 24px;
+  margin-top: 5px;
+}
+#report_month_2i {
+  height: 24px;
+}
+#report_month_3i {
+  height: 24px;
+}
+#report_subject {
+  height: 30px;
+  margin: 6px;
+}
+
 .choose-box2 {
-  width: 55%;
+  width: 50%;
+  padding: 0.5em 0.5em;
+  margin: 0 1em 0 0;
+  color: #5d627b;
+  background: white;
+  border-top: solid 5px #5d627b;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
+  &__container {
+    margin: 0 auto;
+    &__title {
+      margin: 10px 0;
+      &__contents {
+        font-weight: bold;
+        letter-spacing: 2px;
+      }
+      &__input {
+        font-size: 22px;
+      }
+      &__input:focus {
+        outline: none;
+        border:solid 1px skyblue;  /* 枠線の色 */
+        background-color: rgb(252, 252, 234);  /* 背景色 */
+      }
+    }
+    &__description {
+      margin: 15px 0;
+      &__contents {
+        font-weight: bold;
+        letter-spacing: 2px;
+      }
+      &__input:focus {
+        outline: none;
+        border-color: skyblue;   /* 枠線の色 */
+        background-color: rgb(252, 252, 234);  /* 背景色 */
+      }
+    }
+    &__homework {
+      margin: 10px 0;
+      &__contents {
+        font-weight: bold;
+        letter-spacing: 2px;
+      }
+      &__input {
+      }
+      &__input:focus {
+        outline: none;
+        border-color: skyblue;   /* 枠線の色 */
+        background-color: rgb(252, 252, 234);  /* 背景色 */
+      }
+    }
+    &__other {
+      margin: 10px 0;
+      &__contents {
+        font-weight: bold;
+        letter-spacing: 2px;
+      }
+      &__input {
+
+      }
+      &__input:focus {
+        outline: none;
+        border:solid 1px skyblue;  /* 枠線の色 */
+        background-color: rgb(252, 252, 234);  /* 背景色 */
+      }
+    }
+  }
 }
 .choose-box3 {
   width: 15%;
   margin-right: 30px;
   &__student {
-    padding: 0.5em 1em;
+    padding: 0.5em 0.75em 0.5em 2em;
     margin: 1em 0;
     color: #5d627b;
     background: white;
-    border: double 5px #69d6ee;
+    border: double 5px #34ff85;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
     width: 100%;
     border-radius: 5%;
   }
+}
+.report-registration-btn {
+  margin: 20px 0 0 60px;
+  width: 13%;
+  border:solid 1px #ccc;
+  padding: 10px 20px;
+  font-family:Arial, sans-serif;
+  font-size:1.2em;
+  text-transform:uppercase;
+  font-weight:bold;
+  color:#333;
+  cursor:pointer;
+  text-align: center;
+  float: right;
 }
