--- a/app/views/reports/new.html.haml
+++ b/app/views/reports/new.html.haml
@@ -9,25 +9,28 @@
       .choose-box1
         .choose-box1__date
           .choose-box1__date__day 作成日 
-          = r.date_select :month, use_month_numbers: true,end_year: Time.now.year
+          = r.date_select :day, use_month_numbers: true,end_year: Time.now.year
         .choose-box1__subject 
           教科を選ぶ
           = r.select :subject, [['英語', 1],['数学', 2],['国語', 3],['理科', 4],['社会', 5]]
       .choose-box2
-        .choose-box2__title
-          .choose-box2__title 主な内容
-          = r.text_field :title, class: "choose-box2__title", placeholder: "例)現在進行形",class: "choose-box2__title"
-        .choose-box2__description
-          .choose-box2__description__contents 学習内容
-          = r.text_area :description, class: "choose-box2__description__contents", placeholder: "例)学習した内容を記載してください", size: "70x6"
-        .choose-box2__homework
-          .choose-box2__homework__contents 宿題
-          = r.text_area :homework, class: "choose-box2__homework__contents", placeholder: "例)◯◯問題集 Pxx~Pxx", size: "30x2"
-        .choose-box2__other
-          .choose-box2__other__contents 先生から一言
-          = r.text_field :other, class: "choose-box2__other__contents", placeholder: "例)よく理解できていました", size: 30
+        .choose-box2__container
+          .choose-box2__container__title
+            .choose-box2__container__title__contents 主な内容
+            = r.text_field :title, class: "choose-box2__title__input", placeholder: "例)現在進行形",class: "choose-box2__container__title__input"
+          .choose-box2__container__description
+            .choose-box2__container__description__contents 学習内容
+            = r.text_area :description, class: "choose-box2__container__description__input", placeholder: "例)学習した内容を記載してください", size: "70x6"
+          .choose-box2__container__homework
+            .choose-box2__container__homework__contents 宿題
+            = r.text_area :homework, class: "choose-box2__container__homework__input", placeholder: "例)◯◯問題集 Pxx~Pxx", size: "30x2"
+          .choose-box2__container__other
+            = r.submit "登録", class:"report-registration-btn"
+            .choose-box2__container__other__contents 先生から一言
+            = r.text_field :other, class: "choose-box2__container__other__input", placeholder: "例)よく理解できていました", size: 30
+          
       .choose-box3
         .choose-box3__student 
           生徒を選ぶ
           = r.collection_select :student_id, @student_all, :id, :name, :prompt => "生徒を選択"
-    = r.submit "登録", class:""
+       
