--- a/app/views/students/new.html.haml
+++ b/app/views/students/new.html.haml
@@ -6,7 +6,7 @@
       = s.text_field :name, class: "student-first_name", placeholder: "例)田中太郎",class: "student-name-field__fullname"
     .grade-field
       = s.label "学年", class:"grade-field__grade"
-      = s.select :grade, [['中学１年生', 1],['中学２年生', 2],['中学３年生', 3],['高校１年生', 4],['高校２年生', 5],['高校３年生', 6]],
+      = s.select :grade, Student.grades.keys.map {|k| [I18n.t("enums.student.grade.#{k}"), k]},
         {}, class: "grade_class"
     .subject-title 受講科目(任意)
     .subject-field
@@ -16,13 +16,13 @@
       = s.check_box :math,{}, "math_on", "math_off"
       数学
     .subject-field
-      = s.check_box :japanese,{}, "japanese", "false"
+      = s.check_box :japanese,{}, "japanese_on", "japanese_off"
       国語
     .subject-field
-      = s.check_box :science,{}, "science", "false"
+      = s.check_box :science,{}, "science_on", "science_off"
       理科
     .subject-field
-      = s.check_box :social_studies,{}, "social_studies", "false"
+      = s.check_box :social_studies,{}, "social_studies_on", "social_studies_off"
       社会
     #student-regist
       = s.submit "登録", class:"student-regist"
