--- a/app/assets/stylesheets/_report-registration.scss
+++ b/app/assets/stylesheets/_report-registration.scss
@@ -1,10 +1,9 @@
 .report-registration-container {
   width: 95%;
   margin: 0 auto;
-  
 }
 .report-title {
-  width: 25%;
+  width: 20%;
   margin: 1em auto 0;
   text-align: center;
   padding: 0.5em 0.75em;
@@ -135,23 +134,56 @@
         border:solid 1px skyblue;  /* 枠線の色 */
         background-color: rgb(252, 252, 234);  /* 背景色 */
       }
+      &__btns {
+        display: flex;
+        justify-content: flex-end;
+        margin-right: 7%;
+      }
     }
   }
 }
 // .choose-box3 {
 //   width: 15%;
 //   margin-right: 30px;
- 
 // }
 .report-registration-btn {
-  margin-right: 60px;
-  width: 10%;
-  letter-spacing: 2px;
-  font-size:1.5em;
-  text-transform:uppercase;
-  color:#333;
-  cursor:pointer;
-  text-align: center;
-  float: right;
-  border-radius: 10%;
+  // '編集'もこのボタンです
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 149, 238);
+  display: block;
+  font-size: 24px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(0, 149, 238);
+  border-image: initial;
+  border-radius: 4px;
+  padding: 8px 10px;
+  transition: all 0.3s ease-out 0s;
+  text-decoration: none;
+  cursor: pointer;
+  margin-right: 3%;
+  letter-spacing: 5px;
+}
+.report-registration-btn-delete {
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 149, 238);
+  display: block;
+  font-size: 24px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(0, 149, 238);
+  border-image: initial;
+  border-radius: 4px;
+  padding: 8px 10px;
+  transition: all 0.3s ease-out 0s;
+  text-decoration: none;
+  letter-spacing: 5px;
+}
+.report-registration-btn:hover {
+  color: #fff;
+  background-color:  rgb(0, 149, 238);
+}
+.report-registration-btn-delete:hover {
+  color: #fff;
+  background-color:  rgb(0, 149, 238);
 }
