--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,6 +3,8 @@
     .header__container__students
       =link_to "生徒の登録", new_student_path, class: "header__container__students__new"
     - if user_signed_in?
+      .header__container__current_user
+        ログイン中: #{current_user.name}
       .header__container__create-report
         =link_to "報告書作成",new_user_report_path(current_user), class: "header__container__create-report"
     .header__container__title
