--- a/app/views/reports/new.html.haml
+++ b/app/views/reports/new.html.haml
@@ -29,10 +29,18 @@
             .choose-box2__container__homework__contents 宿題
             = r.text_area :homework, class: "choose-box2__container__homework__input", placeholder: "例)◯◯問題集 Pxx~Pxx", size: "30x2"
           .choose-box2__container__other
-            = r.submit "登録", class:"report-registration-btn"
             .choose-box2__container__other__contents 先生から一言
             = r.text_field :other, class: "choose-box2__container__other__input", placeholder: "例)よく理解できていました", size: 30
-          
+            .choose-box2__container__other__btns
+              = r.submit "登録", class:"report-registration-btn"
+              = link_to '戻る', root_path, class:"report-registration-btn-delete"
       -# .choose-box3
 
-       
+          .choose-box2__container__other
+            .choose-box2__container__other__contents 先生から一言
+            = r.text_field :other, class: "choose-box2__container__other__input", placeholder: "例)よく理解できていました", size: 30
+            .choose-box2__container__other__btns
+              -if user_signed_in? && current_user.id == @report.user.id
+                = r.submit "編集", class:"report-registration-btn"
+                = link_to '削除', "/users/#{current_user.id}/reports/#{@report.id}", method: :delete, data: {confirm: "報告書を削除します。よろしいですか？"},class:"report-registration-btn-delete"
+      
