--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,2 +1,31 @@
-.title
-  @name
+.main
+  自分が作成した報告書検索
+  %input#input-text{name: "title", placeholder:"主な内容", type: "text", value: ""}
+  = "自分が作成した報告書件数:#{@result}件"
+  #p 検索結果
+%table.main-table
+  %thead
+    %tr
+      %th 作成日
+      %th 主な内容
+      %th 教科
+      %th 先生
+      %th 生徒名
+      %th 学年
+      %th 詳細
+  - @reports.each do |report|
+    %tr
+      %td  
+        = report.day
+      %td 
+        = report.title
+      %td  
+        = report.subject_i18n
+      %td
+        = report.user.name 
+      %td  
+        = report.student.name
+      %td  
+        = report.student.grade_i18n
+      %td
+        = link_to "詳細", report_path(report), class: "sign-in-btn" 
