--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -1,15 +1,14 @@
 .header {
   width: 100%;
-  background-color: rgb(64, 249, 107);
+  background-color: rgb(39, 254, 89);
   color: white;
-  // position: fixed;
-  // top: 0;
   height: 80px;
   &__container {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 0 5% 0 10%;
+    // flex-direction: row;
+    // justify-content: space-between;
+    justify-content: space-around;
+    // margin: 0 5% 0 10%;
     &__create-report {
       font-size: 22px;
       line-height: 80px;
@@ -20,20 +19,32 @@
     &__create-report:hover {
       color: rgb(252, 85, 227);
     }
-    &__students {
-      font-size: 18px;
-      line-height: 80px;
-      text-decoration: none;
-      color: white;
-      &__new {
+    &__left {
+      display: flex;
+      justify-content: center;
+      margin-left: 2%;
+      &__students {
+        font-size: 18px;
+        line-height: 80px;
         text-decoration: none;
         color: white;
-        font-size:20px;
-        letter-spacing: 4px;
-        font-weight: bold;
+        &__new {
+          text-decoration: none;
+          color: white;
+          font-size:20px;
+          letter-spacing: 4px;
+          font-weight: bold;
+        }
+        &__new:hover {
+          color: rgb(252, 85, 227);
+        }
       }
-      &__new:hover {
-        color: rgb(252, 85, 227);
+      &__create-report {
+        padding-left: 20px;
+        
+        a {
+          font-size: 20px;
+        }
       }
     }
     &__title {
@@ -52,7 +63,7 @@
         line-height: 80px;
         margin: 0 14px;
         a {
-         font-size: 20px;
+         font-size: 21px;
          color: white;
          text-decoration: none;
         }
