--- a/app/assets/stylesheets/_top.scss
+++ b/app/assets/stylesheets/_top.scss
@@ -1,47 +1,111 @@
-table{
-  width: 40%;
-  border-collapse:separate;
-  border-spacing: 0;
+.main {
+  &__top {
+    width: 60%;
+    margin: 0 auto;
+    &__search {
+      text-align: right;
+    }
+  }
+}
+#input-text {
+  font: 15px/24px sans-serif;
+	box-sizing: border-box;
+	width: 60%;
+	padding: 0.3em;
+	transition: 0.3s;
+	letter-spacing: 1px;
+	color: black;
+	border: 1px solid #1b2538;
+	border-radius: 4px;
+}
+#input-text:focus {
+  border: 1px solid #3cda90;
+	outline: none;
+	box-shadow: 0 0 5px 1px rgba(60, 218, 118, 0.5);
 }
 
+table{
+  width: 70%;
+  border-collapse:separate;
+  border-spacing: 0;
+  margin: 0 auto;
+}
 table th:first-child{
   border-radius: 5px 0 0 0;
 }
-
 table th:last-child{
   border-radius: 0 5px 0 0;
   border-right: 1px solid #5f7993;
 }
-
 table th{
   text-align: center;
   color:white;
   background: linear-gradient(#ace4e3,#3ee3f5);
-  border-left: 1px solid #3c6690;
+  // border-left: 1px solid #5fc2f5;
   border-top: 1px solid #3c6690;
   border-bottom: 1px solid #3c6690;
-  box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;
-  padding: 10px 0;
+  // box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;
+  padding: 10px 0px;
+  letter-spacing: 2px;
+  font-weight: bold;
 }
-
 table td{
   text-align: center;
-  border-left: 1px solid #a8b7c5;
+  border-left: 0.2px solid #a8b7c5;
   border-bottom: 1px solid #a8b7c5;
   border-top:none;
-  box-shadow: 0px -3px 5px 1px #eee inset;
-  // width: 25%;
+  box-shadow: 0px -3px 5px 2px #eee inset;
   padding: 10px 0;
 }
-
 table td:last-child{
   border-right: 1px solid #a8b7c5;
 }
-
 table tr:last-child td:first-child {
   border-radius: 0 0 0 5px;
 }
-
 table tr:last-child td:last-child {
   border-radius: 0 0 5px 0;
+}
+.th-date {
+  width: 14%;
+}
+.th-title {
+  width: 30%;
+}
+.th-subject {
+  width: 7%;
+}
+.th-teacher {
+  width: 19%;
+}
+.th-student {
+  width: 19%;
+}
+.th-grade {
+  width: 7%;
+}
+.th-show {
+  width: 8%;
+}
+
+.td-date {
+  width: 13%;
+}
+.td-title {
+  width: 29%;
+}
+.td-subject {
+  width: 6%;
+}
+.td-teacher {
+  width: 18%;
+}
+.td-student {
+  width: 18%;
+}
+.td-grade {
+  width: 6%;
+}
+.td-show {
+  width: 8%;
 }
