--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,14 +3,16 @@
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %script{:src => "http://code.jquery.com/jquery-2.2.3.min.js", :type => "text/javascript"}
+    %script{:src => "https://code.jquery.com/ui/1.12.0/jquery-ui.js"}
+
     %title Portfolio1
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    
   %body
    
   = render 'layouts/header'
-   
+  = render 'layouts/header-sub'
+  
   = yield 
