--- a/app/assets/stylesheets/_student-registration.scss
+++ b/app/assets/stylesheets/_student-registration.scss
@@ -1,6 +1,6 @@
 .student-registration-container {
   background-color: white;
-  width: 40%;
+  width: 35%;
   margin: 0 auto;
   text-align: center;
   background: #f4f6f7;
@@ -9,30 +9,37 @@
   position: relative;
   color: rgb(94, 91, 91);
 }
-
 .student-information {
   font-size: 34px;
   letter-spacing: 4px;
-  margin: 40px 0 30px 0;
+  margin-bottom: 20px;
   background: #6cf7b6;
   padding: 4px;
   text-align: center;
   color: #FFF;
   font-weight: bold;
   border-radius: 8px;
-  padding-top: 16px;
+  padding-top: 12px;
 }
 .student-name-field {
-  font-size: 21px;
+  font-size: 22px;
   &__fullname {
-   padding: 4px;
-   letter-spacing: 2px;
-   font-size: 20px;
+  font-size: 18px;
+  // font: 15px/24px sans-serif;
+  box-sizing: border-box;
+  width: 50%;
+  padding: 0.3em;
+  transition: 0.3s;
+  letter-spacing: 1px;
+  color: black;
+  border: 1.4px solid #1b2538;
+  border-radius: 4px;
   }
-  // input[type='text']:focus {
-  //   border: 2px solid #7cfaf8;
-  //   outline: none;
-  // }
+  &__fullname:focus {
+    border: 1.4px solid #3cda90;
+    outline: none;
+    box-shadow: 0 0 5px 1px rgba(60, 218, 118, 0.5);
+  }
 }
 .grade-field {
   font-size: 20px;
@@ -43,31 +50,33 @@
   font-size: 20px;
   letter-spacing: 2px;
   width: 240px;
-  height: 45px;
+  height: 40px;
   background-color: white;
   margin-left: 1px;
-  // input:select {
-  //   border: 2px solid #7cfaf8;
-  //   outline: none;
-  // }
+  outline: none;
+}
+.grade_class:hover {
+  border: 1.5px solid #3cda90;
+  outline: none;
 }
 .subject-title {
   margin: 25px 0 0 20px;
-  font-size: 22px;
+  font-size: 20px;
   letter-spacing: 2px;
 }
 .subject-field {
   font-size: 22px;
   margin: 5px 0 0 0;
-  input[type=checkbox] {
-    color: red;
-  }
 }
 .student-regist {
-  margin: 30px 0;
+  margin: 20px 0;
   border-radius: 10%;
   box-shadow: 2px 3px 4px gray;
   font-size: 22px;
   letter-spacing: 2px;
-  width: 80px;
+  width: 15%;
+}
+.student-regist:hover {
+ background-color:#6ef9b8;
+ color: white;
 }
