--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,8 +1,10 @@
 .main
-  自分が作成した報告書検索
-  %input#input-text{name: "title", placeholder:"主な内容", type: "text", value: ""}
-  = "自分が作成した報告書件数:#{@result}件"
-  #p 検索結果
+  .main__top
+    .main__top__text
+      自分が作成した報告書から検索(半角スペース 複数条件検索可)
+    %input#input-text{name: "title", placeholder:"主な内容", type: "text", value: ""}
+      .main__top__search
+        = "自分が作成した報告書件数:#{@result}件"
 %table.main-table
   %thead
     %tr
