--- a/app/views/reports/index.html.haml
+++ b/app/views/reports/index.html.haml
@@ -3,11 +3,22 @@
     .main__top__text
       報告書検索(半角スペース 複数条件検索可)
     %input#input-text{name: "title", placeholder:"例)英語 田中", type: "text", value: ""}
-      .main__top__search
-        = "全報告書数:#{@result}件"
   .main__right-news-todo
-    
-  %table.main-table
+    .link-tab
+      =link_to "javascript:void(0)", class: "news-todo-tab btn active-1" do
+        .border-red-1.line-up-1
+        %p.news-title
+          報告書一覧
+    .link-tab
+      =link_to "javascript:void(0)", class: "news-todo-tab btn" do
+        .border-red-1.line-down-1
+        %p.news-title
+          生徒一覧
+    .main__top__search.result-up-1
+      = "全報告書数:#{@result}件"
+    .main__top__search.result-down-1
+      = "全生徒数:#{@result_student}件"
+  %table.main-table.content-1.show-1
     %thead
       %tr
         %th.th-date  作成日
@@ -34,5 +45,39 @@
           = report.student.grade_i18n
         %td.td-show
           = link_to "詳細", report_path(report), class: "sign-in-btn" 
+        -# %td
+        -#   %input{:type => "checkbox"}/
+  %table.main-student-table.content-1.hide-1
+    %thead
+      %tr
+        %th.th-date  登録日
+        %th.th-student-name 生徒名
+        %th.th-grade 学年
+        %th.th-english 英語
+        %th.th-math 数学
+        %th.th-japanese 国語
+        %th.th-science 理科
+        %th.th-social_studies 社会
+        %th.th-show 一覧
+    - @students.each do |student|
+      %tr
+        %td.td-date
+          = student.created_at.strftime('%Y-%m-%d')
+        %td.td-student-name
+          = student.name
+        %td.td-grade 
+          = student.grade_i18n
+        %td.td-english
+          = student.english_i18n
+        %td.td-math
+          = student.math_i18n
+        %td.td-japanese 
+          = student.japanese_i18n
+        %td.td-science  
+          = student.science_i18n
+        %td.td-social_studies
+          = student.social_studies_i18n
+        %td.td-show
+          = link_to "報告一覧", student_path(student), class: "sign-in-btn" 
         -# %td
         -#   %input{:type => "checkbox"}/
