--- a/app/assets/stylesheets/_top.scss
+++ b/app/assets/stylesheets/_top.scss
@@ -14,29 +14,28 @@
   text-align: right;
 }
 // タブ
-.main__right-news-todo {
+.main__tabs {
   width: 75%;
   margin: 15px auto 0;
-  .news-todo-tab{
+  .main__tabs-tab{
     height: 30px;
     width: 12%;
     float: left;
-    
     text-align: center;
     line-height: 30px;
     text-decoration: none;
     color: gray;
     border:solid 1px rgb(90, 237, 50);  
-    background-color: rgb(171, 249, 171);
+    background-color: rgb(238, 249, 238);
     border-radius: 4px 4px 0 0 ;
     }
     .btn:hover{
       opacity: 0.5;
     }
 }
-.border-red-1{
+.border-1{
   height: 2.5px;
-  background-color: rgb(255, 77, 0);
+  background-color: rgb(51, 108, 250);
 }
 
 #input-text {
