--- a/app/assets/stylesheets/_header-sub.scss
+++ b/app/assets/stylesheets/_header-sub.scss
@@ -1,6 +1,6 @@
 .header-sub {
   font-weight: bold;
-  font-size: 16px;
+  font-size: 20px;
   text-align: right;
-  margin: 8px 24px 0 0;
+  margin: 1% 5% 0 0;
 }
