--- a/app/assets/stylesheets/_paginatemytable.scss
+++ b/app/assets/stylesheets/_paginatemytable.scss
@@ -1,28 +1,28 @@
-.pager {
-  text-align: center;
-  margin: 1em 0;
-}
+// .pager {
+//   text-align: center;
+//   margin: 1em 0;
+// }
 
-.pager span {
-  display: inline-block;
-  width: 1.8em;
-  height: 1.8em;
-  line-height: 1.8;
-  text-align: center;
-  cursor: pointer;   
-  margin-right: 0.5em;
-}
+// .pager span {
+//   display: inline-block;
+//   width: 1.8em;
+//   height: 1.8em;
+//   line-height: 1.8;
+//   text-align: center;
+//   cursor: pointer;   
+//   margin-right: 0.5em;
+// }
 
-.pager span {
-  background: #216aaf;
-  color: #fff;
-}
+// .pager span {
+//   background: #216aaf;
+//   color: #fff;
+// }
 
-.pager span:active {
-  background: #e6f1fb;
-  color:#216aaf;
-}
-.ui-state-default:active {
-  background: #e6f1fb;
-  color:#216aaf;
-}
+// .pager span:active {
+//   background: #e6f1fb;
+//   color:#216aaf;
+// }
+// .ui-state-default:active {
+//   background: #e6f1fb;
+//   color:#216aaf;
+// }
