--- a/app/assets/stylesheets/_registration-new.scss
+++ b/app/assets/stylesheets/_registration-new.scss
@@ -12,7 +12,7 @@
 .user-information {
   font-size: 34px;
   letter-spacing: 4px;
-  margin: 40px 0 30px 0;
+  margin: 30px 0 10px 0;
   background: #6cf7b6;
   padding: 4px;
   text-align: center;
@@ -22,6 +22,7 @@
   padding-top: 16px;
 }
 .name-field {
+  margin-top: 20px;
   font-size: 24px;
   input[type='text']:focus {
     border: 2px solid #7cfaf8;
@@ -30,14 +31,14 @@
 }
 #user_name {
   height: 35px;
-  margin: 10px 0 30px 0;
+  margin: 10px 0 20px 0;
   padding: 6px;
   font-size: 23px;
-  width: 40%;
+  width: 45%;
 }
 .password-field {
   font-size: 24px;
-  margin: 20px 0 20px;
+  // margin: 10px 0 10px;
   input:focus {
     border: 2px solid #7cfaf8;
     outline: none;
@@ -45,15 +46,13 @@
 }
 #user_password {
   height: 35px;
-  margin: 10px 0 30px 0;
+  margin: 10px 0 20px 0;
   padding: 6px;
   font-size: 23px;
- 
 }
 .repassword-field {
-  font-size: 24px;
-  margin: 10px 0 30px;
-  font-size: 20px;
+  margin: 0 0 30px;
+  font-size: 22px;
   input:focus {
     border: 2px solid #7cfaf8;
     outline: none;
@@ -61,12 +60,11 @@
 }
 #user_password_confirmation {
   height: 35px;
-  margin: 10px 0 30px 0;
+  margin: 10px 0 10px 0;
   padding: 6px;
   font-size: 23px;
 }
 #actions-regist {
-  margin-top:10px;
   padding-bottom: 30px;
 }
 .actions-regist {
@@ -75,26 +73,31 @@
   font-size: 24px;
   letter-spacing: 2px;
   width: 100px;
+  outline: none;
 }
 #actions-regist-login {
   margin-top:10px;
   padding-bottom: 30px;
+  outline: none;
 }
 .actions-regist-login {
   border-radius: 10%;
   box-shadow: 1px 1px 1px gray;
-  font-size: 16px;
+  font-size: 18px;
   letter-spacing: 2px;
   width: 100px;
   font-weight: normal;
+  padding: 5px;
 }
 .actions-regist-login:hover {
-  background-color:  rgb(97, 205, 216);
-  color: #adff7a;
+  background-color:  #adff7a;
+  color: white;
+  outline: none;
  }
 .actions-regist:hover {
   background-color:  #adff7a;
   color: white;
+  outline: none;
  }
 
  .sessions-link {
