--- a/app/assets/stylesheets/_top.scss
+++ b/app/assets/stylesheets/_top.scss
@@ -1,6 +1,6 @@
 .main {
   &__top {
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
     &__search {
       text-align: right;
@@ -13,9 +13,18 @@
 .main__top__search {
   text-align: right;
 }
+.pink {
+  background-color: #FFEEFF
+}
+.yellow {
+  background-color: #FFFFCC
+}
+.skyblue {
+  background-color: #AAFFFF
+}
 // タブ
 .main__tabs {
-  width: 75%;
+  width: 80%;
   margin: 15px auto 0;
   .main__tabs-tab{
     height: 30px;
@@ -25,12 +34,14 @@
     line-height: 30px;
     text-decoration: none;
     color: gray;
-    border:solid 1px rgb(90, 237, 50);  
+    border:solid 1px rgb(90, 237, 50);
+    border-bottom: solid 0.5px gray;
     background-color: rgb(238, 249, 238);
     border-radius: 4px 4px 0 0 ;
     }
     .btn:hover{
-      opacity: 0.5;
+      color: rgb(90, 237, 50);
+      background-color: white;
     }
 }
 .border-1{
@@ -56,13 +67,14 @@
 }
 
 .main-table{
-  width: 75%;
+  width: 80%;
   border-collapse:separate;
   border-spacing: 0;
   margin: 0 auto;
 }
 table th:first-child{
   border-radius: 5px 0 0 0;
+  border-left: 1px solid #5fc2f5;
 }
 table th:last-child{
   border-radius: 0 5px 0 0;
@@ -84,7 +96,6 @@ table td{
   border-left: 0.2px solid #a8b7c5;
   border-bottom: 1px solid #a8b7c5;
   border-top:none;
-  box-shadow: 0px -3px 5px 2px #eee inset;
   padding: 10px 0;
 }
 table td:last-child{
@@ -96,51 +107,63 @@ table tr:last-child td:first-child {
 table tr:last-child td:last-child {
   border-radius: 0 0 5px 0;
 }
+.th-principal {
+  width: 6%;
+}
 // .th-date {
-//   width: 14%;
+//   width: 10%;
 // }
 // .th-title {
-//   width: 30%;
+//   width: 21%;
 // }
 // .th-subject {
 //   width: 7%;
 // }
 // .th-teacher {
-//   width: 19%;
+//   width: 16%;
 // }
 // .th-student {
-//   width: 19%;
+//   width: 16%;
 // }
 // .th-grade {
 //   width: 7%;
 // }
 // .th-show {
-//   width: 8%;
+//   width: 12%;
 // }
+.show-btn {
+  color: blue;
+}
+.show-btn:hover {
+  color: rgb(77, 255, 0);
+}
 
-.td-date {
-  width: 13%;
+.td-principal {
+  width: 5%;
 }
-.td-title {
-  width: 29%;
-}
-.td-subject {
-  width: 6%;
-}
-.td-teacher {
-  width: 18%;
-}
-.td-student {
-  width: 18%;
-}
-.td-grade {
-  width: 6%;
-}
-.td-show {
-  width: 8%;
-}
+// .td-date {
+//   width: 9%;
+// }
+// .td-title {
+//   width: 20%;
+// }
+// .td-subject {
+//   width: 6%;
+// }
+// .td-teacher {
+//   width: 18%;
+// }
+// .td-student {
+//   width: 18%;
+// }
+// .td-grade {
+//   width: 6%;
+// }
+// .td-show {
+//   width: 12%;
+// }
 .main-student-table{
-  width: 75%;
+  width: 80%;
   border-collapse:separate;
   border-spacing: 0;
   margin: 0 auto;
@@ -148,7 +171,7 @@ table tr:last-child td:last-child {
 .main-student-table th{
   text-align: center;
   color:white;
-  background: linear-gradient(#e4d1b4,#fc5770);
+  background: linear-gradient(#e4d1b4,#fa4949);
   border-left: 1px solid #fc5770;
   border-bottom: 1px solid #f5875f;
   padding: 10px 0px;
