--- a/app/views/layouts/_header-sub.html.haml
+++ b/app/views/layouts/_header-sub.html.haml
@@ -1,3 +1,8 @@
-- if user_signed_in?
-  .header-sub
-    ログイン中: ’#{current_user.name}’ 先生
+.header-sub
+  -unless user_signed_in?
+    ログインして下さい
+  -if user_signed_in? && current_user.admin?
+    ログイン中: ’#{current_user.name}’
+  -elsif user_signed_in? 
+    ログイン中: ’#{current_user.name}’先生
+    
