--- a/app/assets/stylesheets/_report-registration.scss
+++ b/app/assets/stylesheets/_report-registration.scss
@@ -115,10 +115,14 @@
       }
     }
     &__description {
-      margin: 15px 0;
+      margin: 5px 0;
       &__contents {
         font-weight: bold;
         letter-spacing: 2px;
+        &__count {
+          text-align: right;
+          padding-right: 40px;
+        }
       }
       &__input {
         outline: none;
@@ -132,7 +136,7 @@
       }
     }
     &__homework {
-      margin: 10px 0;
+      // margin: 5px 0;
       &__contents {
         font-weight: bold;
         letter-spacing: 2px;
