--- a/app/views/reports/show.html.haml
+++ b/app/views/reports/show.html.haml
@@ -26,7 +26,10 @@
             = r.text_field :title, class: "choose-box2__title__input", placeholder: "例)現在進行形",class: "choose-box2__container__title__input"
           .choose-box2__container__description
             .choose-box2__container__description__contents 学習内容
-            = r.text_area :description, class: "choose-box2__container__description__input", placeholder: "例)学習した内容を記載してください", size: "70x6"
+            = r.text_area :description, class: "choose-box2__container__description__input", placeholder: "例)学習した内容を記載してください 最大420字", size: "70x6"
+            .choose-box2__container__description__contents__count 
+              入力文字数:
+              %span.showCnt #{@report.description.length}
           .choose-box2__container__homework
             .choose-box2__container__homework__contents 宿題
             = r.text_area :homework, class: "choose-box2__container__homework__input", placeholder: "例)◯◯問題集 Pxx~Pxx", size: "30x2"
