--- a/app/assets/stylesheets/_header-sub.scss
+++ b/app/assets/stylesheets/_header-sub.scss
@@ -3,4 +3,36 @@
   font-size: 20px;
   text-align: right;
   margin: 1% 5% 0 0;
+  &__user {
+    font-weight: bold;
+    font-size: 18px;
+    text-align: right;
+    margin: 1% 3% 0 0;
+    &__a {
+      margin-left: 2%;
+      &__btn {
+        display: inline-block;
+        padding: 0.5em 1em;
+        text-decoration: none;
+        background: #f7f7f7;
+        border-left: solid 6px #ff7c5c;/*左線*/
+        color: #ff7c5c;/*文字色*/
+        font-weight: bold;
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+        outline: none;
+        cursor: pointer;
+        opacity: 0.5;
+        font-size: 16px;
+      }
+      &__btn:active {
+        box-shadow: inset 0 0 2px rgba(128, 128, 128, 0.1);
+        transform: translateY(2px);
+        outline: none;
+      }
+      &__btn:hover {
+        opacity: 1;
+        outline: none;
+      }
+    }
+  }
 }
