--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %script{:src => "http://code.jquery.com/jquery-2.2.3.min.js", :type => "text/javascript"}
+    %script{:src => "https://code.jquery.com/jquery-2.2.3.min.js", :type => "text/javascript"}
     %script{:src => "https://code.jquery.com/ui/1.12.0/jquery-ui.js"}
 
     %title Portfolio1
