--- a/app/views/reports/new.html.haml
+++ b/app/views/reports/new.html.haml
@@ -2,6 +2,7 @@
   .report-title 
     生徒指導報告書
   .report-teacher
+    %span.need ※全項目必須です　　　　　　　　
     -if user_signed_in? && current_user.admin?
       作成:#{current_user.name}
     -elsif user_signed_in?
