--- a/app/assets/stylesheets/_registration-new.scss
+++ b/app/assets/stylesheets/_registration-new.scss
@@ -90,12 +90,12 @@
   padding: 5px;
 }
 .actions-regist-login:hover {
-  background-color:  #adff7a;
+  background-color:  #7aff7e;
   color: white;
   outline: none;
  }
 .actions-regist:hover {
-  background-color:  #adff7a;
+  background-color:  #8cff7a;
   color: white;
   outline: none;
  }
