reports/newエラーメッセージ表示

--- a/app/assets/stylesheets/_report-registration.scss
+++ b/app/assets/stylesheets/_report-registration.scss
@@ -68,6 +68,15 @@
     font-size: 18px;
   }
 }
+#report_day_1i {
+  height: 24px;
+}
+#report_day_2i {
+  height: 24px;
+}
+#report_day_3i {
+  height: 24px;
+}
 
 #report_month_1i {
   height: 24px;
