--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -15,7 +15,9 @@
         -# %li.header__container__list__students
         -#   =link_to "担当生徒", root_path, class: ""
         %li.header__container__list__my-page
-          =link_to "マイページ", user_path(current_user), class: "" 
+          =link_to "マイページ", user_path(current_user), class: ""
+        -# %li.headet__container__list__sign-up
+        -#   =link_to "講師登録", new_user_registration_path, class: "post" 
         %li.header__container__list__log-out
           =link_to "ログアウト", destroy_user_session_path, method: :delete
       - else
