--- a/app/views/reports/new.html.haml
+++ b/app/views/reports/new.html.haml
@@ -1,12 +1,17 @@
 .report-registration-container 
   .report-title 
-    生徒指導報告書
+    生徒指導報告書 
   .report-teacher
-    %span.need ※全項目必須です　　　　　　　　
-    -if user_signed_in? && current_user.admin?
-      作成:#{current_user.name}
-    -elsif user_signed_in?
-      作成:#{current_user.name}先生
+    -# %span.need ※全項目必須です　　　　　　　　
+    -# -if user_signed_in? && current_user.admin?
+    -#   作成:#{current_user.name}
+    -# -elsif user_signed_in?
+    -#   作成:#{current_user.name}先生
+  -if @report.errors.any? 
+    .alert
+      %ul
+        -@report.errors.full_messages.each do |message| 
+          %li= message
   = form_with model: @report, local: true do |r|
     .form-box
       .choose-box1
